[gd_scene load_steps=5 format=3 uid="uid://crsj830g6ma2l"]

[ext_resource type="Script" path="res://scripts/bomb.gd" id="1_pr5kl"]
[ext_resource type="Texture2D" uid="uid://bshde6tmh0fpg" path="res://assets/PNG/Lasers/laserRed08.png" id="1_vs61l"]
[ext_resource type="AudioStream" uid="uid://b7eeqplr0thhi" path="res://assets/Bonus/sfx_laser2.ogg" id="3_vr0gu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f75uy"]
radius = 18.0

[node name="Area2D" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_pr5kl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f75uy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_vs61l")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vr0gu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
